INFO:
All changes should be appended to this file with each commit.
On publish, it should be cleared to prepare for the next release cycle.
No formatting, just plain text. CurseForge support for it is terrible.

Change logging starts below:
----------
- fix extraction from crushing wheels
- fix crashes with contraptions breaking blocks
- implement PlayerBlockBreakEvents into BlockHelper#destroyBlockAs
- fix crashes with mechanical arms and many more things (#795)
