@@ -2,21 +2,20 @@ package com.simibubi.create.content.curiosities.toolbox;
 
 import java.util.function.Supplier;
 
-import io.github.fabricators_of_create.porting_lib.transfer.TransferUtil;
-import net.fabricmc.fabric.api.transfer.v1.item.ItemVariant;
-import net.fabricmc.fabric.api.transfer.v1.transaction.Transaction;
-
 import org.apache.commons.lang3.mutable.MutableBoolean;
 
 import com.simibubi.create.foundation.networking.SimplePacketBase;
-import io.github.fabricators_of_create.porting_lib.transfer.item.ItemHandlerHelper;
 
+import io.github.fabricators_of_create.porting_lib.transfer.TransferUtil;
+import net.fabricmc.fabric.api.transfer.v1.item.ItemVariant;
+import net.fabricmc.fabric.api.transfer.v1.item.PlayerInventoryStorage;
+import net.fabricmc.fabric.api.transfer.v1.storage.base.SingleSlotStorage;
+import net.fabricmc.fabric.api.transfer.v1.transaction.Transaction;
 import net.minecraft.core.BlockPos;
 import net.minecraft.nbt.CompoundTag;
 import net.minecraft.nbt.NbtUtils;
 import net.minecraft.network.FriendlyByteBuf;
 import net.minecraft.server.level.ServerPlayer;
-import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.level.block.entity.BlockEntity;
 
@@ -58,23 +57,29 @@ public class ToolboxDisposeAllPacket extends SimplePacketBase {
 			MutableBoolean sendData = new MutableBoolean(false);
 
 			toolbox.inventory.inLimitedMode(inventory -> {
-				for (int i = 0; i < 36; i++) {
-					String key = String.valueOf(i);
-					if (compound.contains(key) && NbtUtils.readBlockPos(compound.getCompound(key)
-						.getCompound("Pos"))
-						.equals(toolboxPos)) {
-						ToolboxHandler.unequip(player, i, true);
-						sendData.setTrue();
-					}
+				try (Transaction t = TransferUtil.getTransaction()) {
+					PlayerInventoryStorage playerInv = PlayerInventoryStorage.of(player);
+					for (int i = 0; i < 36; i++) {
+						String key = String.valueOf(i);
+						if (compound.contains(key) && NbtUtils.readBlockPos(compound.getCompound(key)
+										.getCompound("Pos"))
+								.equals(toolboxPos)) {
+							ToolboxHandler.unequip(player, i, true);
+							sendData.setTrue();
+						}
 
-					ItemStack itemStack = player.getInventory().getItem(i);
-					try (Transaction t = TransferUtil.getTransaction()) {
-						long inserted = toolbox.inventory.insert(ItemVariant.of(itemStack), itemStack.getCount(), t);
-						ItemStack remainder = ItemHandlerHelper.copyStackWithSize(itemStack, (int) (itemStack.getCount() - inserted));
-						if (remainder.getCount() != itemStack.getCount())
-							player.getInventory().setItem(i, remainder);
-						t.commit();
+						SingleSlotStorage<ItemVariant> slot = playerInv.getSlot(i);
+						if (slot.isResourceBlank())
+							continue;
+						long amount = slot.getAmount();
+						ItemVariant resource = slot.getResource();
+
+						long inserted = inventory.insert(resource, amount, t);
+						if (inserted == 0)
+							continue;
+						slot.extract(resource, inserted, t);
 					}
+					t.commit();
 				}
 			});
 
