@@ -10,14 +10,6 @@ import java.util.Set;
 import java.util.UUID;
 import java.util.WeakHashMap;
 
-import io.github.fabricators_of_create.porting_lib.transfer.TransferUtil;
-import io.github.fabricators_of_create.porting_lib.transfer.item.ItemTransferable;
-
-import net.fabricmc.fabric.api.transfer.v1.item.ItemVariant;
-import net.fabricmc.fabric.api.transfer.v1.storage.Storage;
-
-import net.fabricmc.fabric.api.transfer.v1.transaction.Transaction;
-
 import org.jetbrains.annotations.Nullable;
 
 import com.simibubi.create.AllBlocks;
@@ -27,8 +19,15 @@ import com.simibubi.create.foundation.utility.ResetableLazy;
 import com.simibubi.create.foundation.utility.VecHelper;
 import com.simibubi.create.foundation.utility.animation.LerpedFloat;
 import com.simibubi.create.foundation.utility.animation.LerpedFloat.Chaser;
-import io.github.fabricators_of_create.porting_lib.transfer.item.ItemHandlerHelper;
 
+import io.github.fabricators_of_create.porting_lib.transfer.TransferUtil;
+import io.github.fabricators_of_create.porting_lib.transfer.item.ItemHandlerHelper;
+import io.github.fabricators_of_create.porting_lib.transfer.item.ItemTransferable;
+import net.fabricmc.fabric.api.transfer.v1.item.ItemVariant;
+import net.fabricmc.fabric.api.transfer.v1.item.PlayerInventoryStorage;
+import net.fabricmc.fabric.api.transfer.v1.storage.Storage;
+import net.fabricmc.fabric.api.transfer.v1.storage.base.SingleSlotStorage;
+import net.fabricmc.fabric.api.transfer.v1.transaction.Transaction;
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.Direction;
 import net.minecraft.nbt.CompoundTag;
@@ -261,18 +260,19 @@ public class ToolboxTileEntity extends SmartTileEntity implements MenuProvider, 
 		if (keepItems)
 			return;
 
-		Inventory playerInv = player.getInventory();
-		ItemStack playerStack = playerInv.getItem(hotbarSlot);
-		ItemStack toInsert = ToolboxInventory.cleanItemNBT(playerStack.copy());
+		PlayerInventoryStorage playerInv = PlayerInventoryStorage.of(player);
+		SingleSlotStorage<ItemVariant> storage = playerInv.getSlot(hotbarSlot);
+		if (storage.isResourceBlank())
+			return;
+		ItemVariant resource = storage.getResource();
+		int amount = (int) storage.getAmount();
+		ItemStack toInsert = ToolboxInventory.cleanItemNBT(resource.toStack(amount));
 		try (Transaction t = TransferUtil.getTransaction()) {
 			ItemStack remainder = inventory.distributeToCompartment(toInsert, slot, t);
-
-			if (remainder.getCount() != toInsert.getCount())
-				playerInv.setItem(hotbarSlot, remainder);
+			int inserted = amount - remainder.getCount();
+			storage.extract(resource, inserted, t);
 			t.commit();
 		}
-
-
 	}
 
 	private void tickAudio() {
