@@ -9,4 +9,5 @@ Change logging starts below:
 - fix crashes with contraptions breaking blocks
 - implement PlayerBlockBreakEvents into BlockHelper#destroyBlockAs
 - fix crashes with mechanical arms and many more things (#795)
-
+- fix toolbox return erroring (#794)
+- fix alt sometimes getting stuck when closing toolbox menu
